objects/ASI_CRM_Division__c.object
<CustomObject>
    <description>ASI_CRM_Division</description>
    <fields>
        <fullName>ASI_CRM_CN_Chinese_Name__c</fullName>
        <label>Chinese Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_RTMK__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RTMK</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Divisions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Division_AD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division AD</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.CompanyName</field>
                <operation>equals</operation>
                <value>Pernod Ricard China</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Region</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Divisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Division_Code__c</fullName>
        <label>Division Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_English_Name__c</fullName>
        <label>English Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>ASI_CRM_Region__c</referenceTo>
        <relationshipLabel>Divisions</relationshipLabel>
        <relationshipName>Divisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Division</label>
    <listViews>
        <fullName>ASI_CRM_CN_Division</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Chinese_Name__c</columns>
        <columns>ASI_CRM_English_Name__c</columns>
        <columns>ASI_CRM_Division_Code__c</columns>
        <columns>ASI_CRM_Division_AD__c</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>ASI_CRM_Sequence__c</columns>
        <columns>ASI_CRM_External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>CN Division</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Chinese_Name__c</columns>
        <columns>ASI_CRM_Division_AD__c</columns>
        <columns>ASI_CRM_Division_Code__c</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>ASI_CRM_Sequence__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>ASI_CRM_External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Division Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Divisions</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Region</fullName>
        <active>true</active>
        <label>CN Region</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>